name:                xp
version:             0.1.0.0
synopsis:            expense tracking
license:             MIT
license-file:        LICENSE
author:              Sharif Olorin, Rachael Oxley
maintainer:          sio@tesser.org
copyright:           2016 Sharif Olorin and Rachael Oxley
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Xp
  build-depends:       base >= 3 && < 5
  default-language:    Haskell2010

executable xp
  hs-source-dirs:      main
  main-is:             xp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , xp
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  build-depends:       base
                     , xp
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
